Ingress/wildcard-example/k8s-manifests/service-wildcard.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    app.kubernetes.io/name: httpd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
