Ingress/wildcard-example/k8s-manifests/ingress-wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "*.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/path1"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - pathType: Prefix
        path: "/path2"
        backend:
          service:
            name: httpd-service
            port:
              number: 80
